external-crates/move/crates/move-compiler/tests/iota_mode/id_leak/private_pack.exp
error[E04001]: restricted visibility
   ┌─ tests/iota_mode/id_leak/private_pack.move:19:9
   │
 5 │     struct A has key {
   │            - Struct defined in module 'a::a'
   ·
19 │         A { id }
   │         ^^^^^^^^ Struct 'a::a::A' can only be instantiated within its defining module 'a::a'

